--- a/LoginPage/LoginPage/templates/login.html
+++ b/LoginPage/LoginPage/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Medical System Login</h2>
+        <h2>Medication Adherence System</h2>
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 {% for category, message in messages %}
