added an option for first and last name when registering, also displays name on dashboard

--- a/Sprint 1/LoginPage/templates/dashboard.html
+++ b/Sprint 1/LoginPage/templates/dashboard.html
@@ -60,7 +60,7 @@
 
 <body>
     <div class="container">
-        <h2>Welcome, {{ user }}!</h2>
+        <h2>Welcome, {{ user.first_name }} {{ user.last_name }}!</h2>
         <a href="{{ url_for('medications') }}" class="button">Add and Track Medications</a>
         <a href="{{ url_for('logout') }}" class="logout-link">Logout</a>
     </div>
