--- a/Sprint 1/LoginPage/templates/register.html
+++ b/Sprint 1/LoginPage/templates/register.html
@@ -17,6 +17,8 @@
             {% endif %}
         {% endwith %}
         <form action="/register" method="post">
+            <input type="text" name="first_name" placeholder="First Name" required>
+            <input type="text" name="last_name" placeholder="Last Name" required>
             <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Register</button>
