added dosageand notes features to the medicaation tracker

--- a/Sprint 2-PatientInformation/templates/add_medication.html
+++ b/Sprint 2-PatientInformation/templates/add_medication.html
@@ -104,12 +104,18 @@
                 <option value="custom">Custom interval</option>
             </select>
 
+            <label for="dosage">Dosage</label>
+            <input type=""text" name="dosage" placeholder="Dosage" required>
+
             <div id="custom-interval-container" style="display: none;">
                 <input type="number" name="custom_interval_days" placeholder="Every X days" min="1">
             </div>
 
             <label for="start_date">Start Date:</label>
             <input type="date" name="start_date" required>
+
+            <label for="notes">Notes:</label>
+            <textarea name="notes" rows="4" cols="50" placeholder="Notes"></textarea>
 
             <button type="submit">Add Medication</button>
         </form>
